<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu"
        android:title=""
        android:icon="@drawable/baseline_menu_24"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/setting_icon"
                android:title="@string/Setting"
                app:showAsAction="never"/>
            <item
                android:id="@+id/new_massage"
                android:title="@string/New_Massage"
                android:icon="@drawable/setting_icon"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sign_out"
                android:title="@string/Sign_Out"
                android:icon="@drawable/setting_icon"
                app:showAsAction="never"/>

        </menu>

    </item>

</menu>