<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_24sdp"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="vertical"
    tools:context=".activities.SingUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reg_select_photo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:hint="@string/select_photo"
                android:background="@drawable/profile_dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/Select_photo_view"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"/>

        </FrameLayout>
        <EditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="@dimen/_40sdp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:hint="@string/enter_user_name"
            android:paddingStart="@dimen/_16ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_13sdp"
            android:inputType="textPersonName"
            android:textColor="@color/primary_text"
            android:background="@drawable/background_input"/>

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:hint="@string/enter_email"
            android:paddingStart="@dimen/_16ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_13sdp"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_text"
            android:background="@drawable/background_input"/>
        <EditText
            android:id="@+id/reg_Phonenumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/enter_phone_number"
            android:paddingStart="@dimen/_16ssp"
            android:inputType="number"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16ssp"/>
        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/enter_password"
            android:paddingStart="@dimen/_16ssp"
            android:inputType="textPassword"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16ssp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_register_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:cornerRadius="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_30ssp"
            android:hint="@string/reg_btn"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/already_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/_13ssp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>