<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SingInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_again"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome back you've been missed!"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/secondary_text"/>

        <EditText
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="@dimen/_45sdp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:hint="@string/email"
            android:paddingStart="@dimen/_16ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_14sdp"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_text"
            android:background="@drawable/background_input"/>
        <EditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/password"
            android:paddingStart="@dimen/_16ssp"
            android:inputType="textPassword"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp"
            android:paddingEnd="@dimen/_16ssp"/>

        <TextView
            android:id="@+id/rc_password"
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_20sdp"
            android:text="Recovery Password"
            android:gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_165sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:cornerRadius="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_23ssp"
            android:hint="Log In"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:id="@+id/sing_in_new_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_40ssp"
            android:text="@string/create_new_account"/>

    </LinearLayout>

</ScrollView>