<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_24sdp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/maintext"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="39dp"
        app:cardBackgroundColor="@color/input_background"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bcimg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bcc" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/maintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/welcome_to_chatwithme"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="Unleash the Power of Connection.
            Log in and embark on a journey of endless conversations."
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/index_singup_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_33sdp"
                android:backgroundTint="@color/input_background"
                android:hint="@string/sing_up"
                android:textColorHint="@color/primary_text"
                android:textSize="@dimen/_15sdp"
                app:cornerRadius="@dimen/_8sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/index_singin_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_8sdp"
                android:backgroundTint="@color/input_background"
                android:hint="@string/sing_in"
                android:textColorHint="@color/primary_text"
                android:textSize="@dimen/_15sdp"
                app:cornerRadius="@dimen/_8sdp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>